--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "bootstrap": "~3.2.0",
     "angular-resource": "1.2.16",
     "angular-animate": "1.2.16",
-    "angular-route": "1.2.16"
+    "angular-route": "1.2.16",
+    "d3": "~3.4.13"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
