--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-resource": "1.2.16",
     "angular-animate": "1.2.16",
     "angular-route": "1.2.16",
-    "d3": "~3.4.13"
+    "d3": "~3.4.13",
+    "angular-perfect-scrollbar": "*"
   },
   "devDependencies": {
     "angular-mocks": "1.2.16",
